<resources>
    <string name="app_name">Gerenciador de Pedidos</string>

    <string name="menu_order_details_more_details">Detalhes</string>
    <string name="menu_order_details_clear">Limpar</string>
    <string name="menu_order_details_skip">Pular</string>

    <string name="dialog_ok">OK</string>
    <string name="dialog_cancel">Cancelar</string>

    <string name="orders_list_title">Lista de Pedidos</string>
    <string name="orders_list_processed_at_label">Processado em:</string>
    <string name="orders_list_last_modification_label">Última modificação:</string>
    <string name="orders_list_size_label">Itens:</string>
    <string name="orders_list_ship_type_label">Forma de envio:</string>
    <string name="orders_list_id_label">ID:</string>
    <string name="orders_list_action_process">Processar</string>
    <string name="orders_list_action_details">Detalhes</string>
    <string name="order_list_processed_at_empty">Não processado</string>
    <string name="order_list_empty">Nenhum pedido.</string>

    <string name="info_title">Pedido: #%1$d</string>

    <string name="info_order_title">Detalhes do pedido</string>
    <string name="info_order_size_label">Items</string>
    <string name="info_order_processed_at_label">Processado em:</string>
    <string name="info_order_last_modification_label">Última modificação</string>
    <string name="info_order_processed_at_empty">Não processado</string>

    <string name="info_shipment_title">Detalhes de entrega</string>
    <string name="info_shipment_type_label">Tipo:</string>
    <string name="info_shipment_address_label">Endereço:</string>

    <string name="info_customer_title">Detalhes do consumidor</string>
    <string name="info_customer_id_label">ID:</string>
    <string name="info_customer_name_label">Nome:</string>

    <string name="order_details_count">Items processados:</string>
    <string name="order_details_count_text">%1$d / %2$d</string>
    <string name="order_details_finished">Finalizado:</string>
    <string name="order_details_finished_action">Concluir</string>
    <string name="order_details_processed_action">Fechar</string>
    <string name="order_details_skip_dialog_title">Deseja pular este pedido?</string>
    <string name="order_details_skip_dialog_message">Todo progresso será perdido!</string>
    <string name="order_details_clear_dialog_title">Deseja reiniciar este pedido?</string>
    <string name="order_details_clear_dialog_message">Todo progresso será perdido!</string>
    <string name="order_details_back_dialog_title">Deseja sair deste pedido?</string>
    <string name="order_details_back_dialog_message">Todo progresso será perdido!</string>
    <string name="order_details_close_dialog_title">Deseja finalizar o processamento?</string>
    <string name="order_details_close_dialog_message">Todo progresso não concluido será perdido!</string>

    <string name="order_item_title">Código: %1$s</string>

    <string name="order_item_code_label">Código:</string>
    <string name="order_item_description_label">Descrição:</string>
    <string name="order_item_quantity_label">Processados:</string>

    <string name="dashboard_orders_to_process">para processar</string>
    <string name="dashboard_orders_processed">processados</string>
    <string name="dashboard_orders_all">todos</string>
    <string name="dashboard_orders_find">procurar</string>
    <string name="dashboard_orders_find_dialog_title">Procurar IDs:</string>
    <string name="dashboard_orders_find_dialog_message">Digite os IDs separados por virgula</string>
    <string name="dashboard_orders_find_dialog_error_title">Erro nos IDs</string>
    <string name="dashboard_orders_find_dialog_erro_message">Os IDs devem conter números separados por vírgula, sem espaços.</string>

    <string name="barcode_processor_title">#%1$d</string>
    <string name="barcode_processor_finish_dialog_title">Todos os items foram processados!</string>
    <string name="barcode_processor_finish_dialog_message">Voltar para lista.</string>
    <string name="barcode_processor_items_left">Faltam 0 items</string>
    <string name="barcode_processor_success_message">Sucesso [%1$s]</string>
    <string name="barcode_processor_already_processed_message">Código já processado  [%1$s]</string>
    <string name="barcode_processor_invalid_message">Código Inválido [%1$s]</string>

    <string name="error_communication">Falha de comunicacão.</string>
    <string name="error_permission_title">Erro de Permissão!</string>
    <string name="error_permission_message">Você deve permitir acesso: %1$s</string>

    <string name="permission_name_camera">CAMERA</string>
</resources>
