<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="8dp"
    android:layout_marginRight="8dp"
    android:orientation="vertical">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp">

        <View
            android:id="@+id/order_image"
            android:layout_width="72dp"
            android:layout_height="72dp"
            android:background="@android:color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/order_id_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:text="@string/orders_list_id_label"
            app:layout_constraintBottom_toTopOf="@+id/order_ship_type_label"
            app:layout_constraintLeft_toRightOf="@+id/order_image"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed" />

        <TextView
            android:id="@+id/order_ship_type_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/orders_list_ship_type_label"
            app:layout_constraintBottom_toTopOf="@+id/order_size_label"
            app:layout_constraintLeft_toLeftOf="@+id/order_id_label"
            app:layout_constraintTop_toBottomOf="@+id/order_id_label" />

        <TextView
            android:id="@+id/order_size_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/orders_list_size_label"
            app:layout_constraintBottom_toTopOf="@+id/order_last_modification_date_label"
            app:layout_constraintLeft_toLeftOf="@+id/order_id_label"
            app:layout_constraintTop_toBottomOf="@+id/order_ship_type_label" />

        <TextView
            android:id="@+id/order_last_modification_date_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/orders_list_last_modification_label"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="@+id/order_id_label"
            app:layout_constraintTop_toBottomOf="@+id/order_size_label" />

        <TextView
            android:id="@+id/order_id_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="4dp"
            app:layout_constraintLeft_toRightOf="@+id/order_id_label"
            app:layout_constraintTop_toTopOf="@id/order_id_label"
            tools:text="#15447" />

        <TextView
            android:id="@+id/order_ship_type_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="4dp"
            app:layout_constraintLeft_toRightOf="@+id/order_ship_type_label"
            app:layout_constraintTop_toTopOf="@id/order_ship_type_label"
            tools:text="Sedex" />

        <TextView
            android:id="@+id/order_size_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="4dp"
            app:layout_constraintLeft_toRightOf="@+id/order_size_label"
            app:layout_constraintTop_toTopOf="@id/order_size_label"
            tools:text="5" />

        <TextView
            android:id="@+id/order_last_modification_date_value"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="4dp"
            android:ellipsize="end"
            android:maxLines="1"
            app:layout_constraintLeft_toRightOf="@id/order_last_modification_date_label"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@id/order_last_modification_date_label"
            tools:text="09/07/2017 às 22:00" />

    </android.support.constraint.ConstraintLayout>

</android.support.v7.widget.CardView>