<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/default_bar_height"
        android:layout_gravity="center_vertical"
        android:gravity="center_vertical"
        android:paddingLeft="8dp"
        android:text="@string/info_order_title"
        android:textSize="@dimen/large_text_size"
        android:textStyle="bold"
        tools:ignore="RtlSymmetry" />

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="4dp">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/info_order_size_label"
                style="@style/OrdersList.Labels"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/info_order_size_label"
                app:layout_constraintBottom_toTopOf="@+id/info_order_processed_at_label"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/info_order_processed_at_label"
                style="@style/OrdersList.Labels"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/info_order_processed_at_label"
                app:layout_constraintBottom_toTopOf="@+id/info_order_last_modification_label"
                app:layout_constraintLeft_toLeftOf="@+id/info_order_size_label"
                app:layout_constraintTop_toBottomOf="@+id/info_order_size_label" />

            <TextView
                android:id="@+id/info_order_last_modification_label"
                style="@style/OrdersList.Labels"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:text="@string/info_order_last_modification_label"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="@+id/info_order_size_label"
                app:layout_constraintTop_toBottomOf="@+id/info_order_processed_at_label" />

            <TextView
                android:id="@+id/info_order_size_value"
                style="@style/OrdersList.Values"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="4dp"
                app:layout_constraintLeft_toRightOf="@+id/info_order_size_label"
                app:layout_constraintTop_toTopOf="@+id/info_order_size_label"
                tools:text="5" />

            <TextView
                android:id="@+id/info_order_processed_at_value"
                style="@style/OrdersList.Values"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="4dp"
                android:layout_marginRight="8dp"
                android:ellipsize="end"
                android:maxLines="2"
                app:layout_constraintLeft_toRightOf="@+id/info_order_processed_at_label"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="@+id/info_order_processed_at_label"
                tools:text="09/07/2017 às 22:00" />

            <TextView
                android:id="@+id/info_order_last_modification_value"
                style="@style/OrdersList.Values"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="4dp"
                android:layout_marginRight="8dp"
                android:ellipsize="end"
                android:maxLines="2"
                app:layout_constraintLeft_toRightOf="@+id/info_order_last_modification_label"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="@+id/info_order_last_modification_label"
                tools:text="09/07/2017 às 22:00" />
        </android.support.constraint.ConstraintLayout>
    </android.support.v7.widget.CardView>
</LinearLayout>
