<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/order_root"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="4dp"
    android:layout_marginLeft="8dp"
    android:layout_marginRight="8dp"
    android:layout_marginTop="4dp"
    android:orientation="vertical">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/selectableItemBackground">

        <View
            android:id="@+id/order_image"
            android:layout_width="72dp"
            android:layout_height="72dp"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="16dp"
            android:background="@android:color/black"
            app:layout_constraintBottom_toTopOf="@+id/order_list_separator"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <TextView
            android:id="@+id/order_id_label"
            style="@style/OrdersList.Labels"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:text="@string/orders_list_id_label"
            app:layout_constraintBottom_toTopOf="@+id/order_ship_type_label"
            app:layout_constraintLeft_toRightOf="@+id/order_image"
            app:layout_constraintTop_toTopOf="@+id/order_image"
            app:layout_constraintVertical_chainStyle="packed" />

        <TextView
            android:id="@+id/order_ship_type_label"
            style="@style/OrdersList.Labels"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/orders_list_ship_type_label"
            app:layout_constraintBottom_toTopOf="@+id/order_size_label"
            app:layout_constraintLeft_toLeftOf="@+id/order_id_label"
            app:layout_constraintTop_toBottomOf="@+id/order_id_label" />

        <TextView
            android:id="@+id/order_size_label"
            style="@style/OrdersList.Labels"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/orders_list_size_label"
            app:layout_constraintBottom_toTopOf="@+id/order_last_modification_date_label"
            app:layout_constraintLeft_toLeftOf="@+id/order_id_label"
            app:layout_constraintTop_toBottomOf="@+id/order_ship_type_label" />

        <TextView
            android:id="@+id/order_last_modification_date_label"
            style="@style/OrdersList.Labels"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/orders_list_last_modification_label"
            app:layout_constraintBottom_toBottomOf="@+id/order_image"
            app:layout_constraintLeft_toLeftOf="@+id/order_id_label"
            app:layout_constraintTop_toBottomOf="@+id/order_size_label" />

        <TextView
            android:id="@+id/order_id_value"
            style="@style/OrdersList.Values"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="4dp"
            android:layout_marginStart="4dp"
            app:layout_constraintLeft_toRightOf="@+id/order_id_label"
            app:layout_constraintTop_toTopOf="@+id/order_id_label"
            tools:text="#15447" />

        <TextView
            android:id="@+id/order_ship_type_value"
            style="@style/OrdersList.Values"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="4dp"
            android:layout_marginStart="4dp"
            app:layout_constraintLeft_toRightOf="@+id/order_ship_type_label"
            app:layout_constraintTop_toTopOf="@+id/order_ship_type_label"
            tools:text="Sedex" />

        <TextView
            android:id="@+id/order_size_value"
            style="@style/OrdersList.Values"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="4dp"
            android:layout_marginStart="4dp"
            app:layout_constraintLeft_toRightOf="@+id/order_size_label"
            app:layout_constraintTop_toTopOf="@+id/order_size_label"
            tools:text="5" />

        <TextView
            android:id="@+id/order_last_modification_date_value"
            style="@style/OrdersList.Values"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="4dp"
            android:ellipsize="end"
            android:maxLines="1"
            app:layout_constraintLeft_toRightOf="@+id/order_last_modification_date_label"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@+id/order_last_modification_date_label"
            tools:text="09/07/2017 às 22:00" />

        <View
            android:id="@+id/order_list_separator"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginTop="16dp"
            android:background="@color/warm_grey"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/order_last_modification_date_value" />

        <TextView
            android:id="@+id/order_action_text"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:gravity="center"
            android:text="@string/orders_list_action"
            android:textAllCaps="true"
            android:textColor="@color/primary_text"
            android:textSize="@dimen/regular_text_size"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@+id/order_action_icon"
            app:layout_constraintTop_toBottomOf="@+id/order_list_separator" />

        <ImageView
            android:id="@+id/order_action_icon"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginLeft="4dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toRightOf="@+id/order_action_text"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/order_list_separator"
            app:srcCompat="@drawable/ic_right_black_vector" />

    </android.support.constraint.ConstraintLayout>

</android.support.v7.widget.CardView>